src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Bounces__c</fullName>
        <description>Bounces</description>
        <label>Bounces</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CazoomiId__c</fullName>
        <description>CazoomiId</description>
        <externalId>true</externalId>
        <label>CazoomiId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clicks__c</fullName>
        <description>Clicks</description>
        <label>Clicks</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forwards__c</fullName>
        <description>Forwards</description>
        <label>Forwards</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opens__c</fullName>
        <description>Opens</description>
        <label>Opens</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>